Shenandoah unified logging
Reviewed-by: wkemper, shade