@@ -28,7 +28,7 @@
  *
  * @run main/othervm -Xmx1g -Xms1g -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions
  *      -XX:+ShenandoahRegionSampling -XX:+ShenandoahRegionSampling
- *      -XX:+ShenandoahLogRegionSampling -XX:ShenandoahRegionSamplingFile=region-snapshots-%p.log
+ *      -Xlog:gc+region=debug:region-snapshots-%p.log::filesize=100,filecount=3
  *      -XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=adaptive
  *      TestRegionSamplingLogging
  */
