@@ -28,8 +28,7 @@
     *
     * @run main/othervm -Xmx1g -Xms1g -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions
     *      -XX:+ShenandoahRegionSampling -XX:+ShenandoahRegionSampling
-    *      -XX:+ShenandoahLogRegionSampling -XX:ShenandoahRegionSamplingFile=region-snapshots-%p.log
-    *      -XX:ShenandoahLogFileCount=3 -XX:ShenandoahLogFileSize=100
+    *      -Xlog:gc+region=debug:region-snapshots-%p.log::filesize=100,filecount=3
     *      -XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=adaptive
     *      TestShenandoahLogRotation
     */
